fix(angular/lightbox): hide scrollbar from scroll lock container (#1142)
Closes #1139

--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -592,6 +592,12 @@ textarea {
   max-height: none;
 }
 
+// Overwrites the 'scroll' value from the CDK, since this causes a scrollbar to be shown
+// on top of the lightbox.
+.cdk-global-scrollblock {
+  overflow-y: auto;
+}
+
 // ----------------------------------------------------------------------------------------------------
 // Headings
 // ----------------------------------------------------------------------------------------------------
